slack timestamp alignment fix

--- a/webapp/src/tiles/chat/styles/_chat-message.scss
+++ b/webapp/src/tiles/chat/styles/_chat-message.scss
@@ -95,6 +95,7 @@
 			color: $blue-80;
       opacity: 0;
       @include flex(center, center);
+      padding-top: 4px;
 		}
 
     &:after {
